--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -2,13 +2,12 @@
   width: 100%;
   height: 100%;
   font-size: 0.9rem;
-  text-transform: uppercase;
   padding: 1rem 0.5rem;
   margin-bottom: 0.8rem;
   border-radius: 10px;
   border: none;
   background: none;
-  color: white;
+  color: #fff;
   transition: all 300ms;
 }
 
